# TIL

./: .gitignore
Apache-Airflow/: airflow.cfg
DL_advanced/: README.md  cnn.ipynb  dnn.ipynb  my_resnet.py  myresnet.ipynb  requirement.txt  resnet bottle.ipynb  resnet.ipynb  resnet_aug.ipynb
Data_Mining/: 데이터_마이닝_Term_Project_4조.ipynb  데이터_마이닝_Term_Project_김창영.ipynb
FastAPI/projects/web_single/: Dockerfile  README.md  api.py  config.py  database.py  db.sqlite3  dependencies.py  main.py  pyproject.toml  schemas.py
HTML/: font.html  form.html  form_button.html  form_dropdownlist.html  form_label.html  form_method.html  form_radio_checkbox.html  form_upload.html  html5.html  html5_form4.html  html5_form_attr.html  index.html  index2.html  index3.html  index4.html  sematic.html
JS/: 1.js  Apply.js  Array1.js  Array2.js  Array3.js  Async.js  Await.js  Bind.js  Class.js  Closure.js  Destructuring_assignment.js  Generator.js  Promise.js  Prototype.js  Restparameters_SpreadSyntax.js  StringMethod.js  Symbol.js  Time.js  call.js  index.html  method.js
fastapi_tutorial/: main.py
데이터 주무르기/: 서울시 구별 CCTV 현황.ipynb  서울시 범죄 현황 분석.ipynb
딥러닝 기초/: 7-1(인공신경망).ipynb  7-2(심층신경망).ipynb  7-3(신경망 모델 훈련).ipynb  8-1(합성곱 신경망의 구성 요소).ipynb  8-2(합성곱 신경망을 사용한 이미지 분류).ipynb
딥러닝 파이토치 교과서/: Chap2_car_predcit.ipynb  Chap2_torch_basic.ipynb  Chap5_MNIST_CNN.ipynb  Chap5_MNIST_DNN.ipynb  Chap5_전이학습.ipynb  chap12.ipynb  chap7_GRU계층.ipynb  chap7_LSTM계층.ipynb  chap7_양방향LSTM계층.ipynb
머신러닝 데이터 전처리/: 3-1.ipynb  3-2.ipynb  3-3.ipynb  3-4.ipynb  3장.ipynb  4.ipynb  5.ipynb  7(시계열데이터).ipynb  7.ipynb
(+78 files in other folders)
