[tool.poetry]
name = "web-single-fastapi"
version = "0.1.0"
description = ""
authors = ["ChangZero <changzero.kim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
scikit-learn = "^1.4.1.post1"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
